--- a/Thaumic_Horizons/zh_CN.lang
+++ b/Thaumic_Horizons/zh_CN.lang
@@ -371,9 +371,8 @@ golemPowder2=Particularly complex matter cannot be animated in this fashion. It 
 golemPowder3=Should you desire to have your household tasks performed by an animated cake, you can attach a golem core to one of these temporary constructs. It will henceforth behave like a conventional permanent golem, including the ability to accept upgrades and the Advanced Golem infusion.<BR>You can also pick it up with a golemancer's bell as usual. However, should the core be removed, the golem will immediately revert to inanimate matter, losing any attached upgrades.
 tc.research_name.focusAnimation=法杖核心: 活化
 tc.research_text.focusAnimation=傀儡学之进化
-focusAnimation1=制造一个傀儡绝对是一个复杂且需要深思熟虑的过程-它是少数几个不能只靠法杖轻轻一点就能完成的事情之一.直到现在,依然如此.<BR>作为创世时代的一分子,元始珍珠有着和最基础的物质相迎合的特性.你如果用你的血来注魔一个元始珍珠,你可以利用这种链接简单而迅速地给予非生命物体以生命.<BR>当然,在实践中,神秘学少有如此简单的情况,但由于你在傀儡学中的高超技艺,你已经做好了把这个理论变成现实的准备.
-focusAnimation2=用装有此核心的法杖右击一个固体的正方体方块将在短时间内将其转化为傀儡.这个结构的能力,以及Vis的需求量,都取决于方块的材质.特定复杂的物质是不能通过这种新方式动起来的.但活化一部分非正方体方块却是有可能的.<BR>在没有运转核心的情况下,这样的傀儡只会按照本能运转,且不会存活太久.在它们短暂的存在当中,它们会紧随它们的创造者,攻击任何周围的敌对生物.傀儡时限到后,它们会变回创造它的那个方块.你还可以用傀儡铃铛提前取消活化.
-focusAnimation3=想让一块活化的蛋糕来承担持家的任务的话,你可以给一个这种临时的结构附加一个傀儡运转核心.从此以后它将会像传统的永久性的傀儡那样运转,包括附加升级的能力,以及高级傀儡注魔.你也可以用傀儡铃铛把它们捡起来.然而,如果核心被移除,傀儡会立刻变回无生命的物质.
+focusAnimation1=Creating a golem is a complex and deliberate process - hardly the sort of thing that can be accomplished with a flick of the wand. Until now, that is.<BR>As a fragment of creation, the primordial pearl possesses a sympathetic connection to base matter. Were you to infuse one with your own blood, you could use this link to quickly and easily bestow life upon inanimate objects.<BR>Of course, thaumaturgy is seldom that simple in practice, but thanks to your mastery of golemancy you are ready to turn this theory into a reality.
+focusAnimation2=The golems spawned by this focus are identical to those created with animation powder. The vis requirement varies by material, but generally stronger golems will require more energy to animate.
 tc.research_name.focusRecharge=法杖核心: 复合充能
 tc.research_text.focusRecharge=现在提升50%便携性!
 focusRecharge1=一些针对你的复合充能台的修理造就了一个有着相同运转原则但是更简洁的设备.将其像普通核心一样装在法杖顶端,一系列Vis过滤器将允许你直接抽取灵气节点中的复合Vis.<BR>正如它的前辈,对于每一点被吸入的复合要素的Vis,复合充能核心只能产生一点元始要素的Vis,但是你觉得它的效率可以通过核心镶饰台来提升.
